Basic MaReTe config generator